# SwarmClone

./: .gitignore  .gitmodules  API.txt  API_old.txt  Dockerfile  README.md  TODO.md  get_cosyvoice_reqs.py  get_req.py  pyproject.toml  requirements.txt  requirements_light.txt  requirements_tts_cosyvoice.txt  设定.txt
config/: default.toml  server_settings.toml  server_settings.toml.example
docs/: README_en.md
frontend/static/: index.html  panel.html
frontend/static/components/: sidebar.html
frontend/static/css/: index.css  style.css
frontend/static/html/pages/: monitor.html  settings.html
frontend/static/js/: index.js  sidebar.js
frontend/static/pages/: ab_project.html  index.html  live4.html
mcp_test/: test_weather.py
models/pretrain/: pretrain.json
res/: README.md  hiyori.json
src/: config.py
swarmclone/: README.md  __init__.py  __main__.py  asr_remote.py  bilibili_chat.py  config.py  constants.py  controller.py  frontend_live2d.py  frontend_socket.py  llm.py  llm_api.py  llm_minilm2.py  llm_transformers.py  local_llm.py  messages.py  module_manager.py  modules.py  ncatbot_modules.py  plugins.py  request_parser.py  tts_edge.py  utils.py
swarmclone/asr/: __init__.py  __main__.py  asr.py  config_asr.py  sherpa.py  sherpa_asr.py  sherpa_vad.py
swarmclone/asr_dummy/: __main__.py  sherpa_vad.py
swarmclone/chat_bilibili/: __main__.py
swarmclone/chat_dummy/: __main__.py
swarmclone/controller/: __init__.py  __main__.py  auth_service.py  db_init.py  settings.py  user_service.py
swarmclone/controller/utils/: add_user.py  create_db.py  generate_config.py
swarmclone/frontend_dummy/: __main__.py
swarmclone/llm/: __init__.py  __main__.py  config_llm.py  dataset.py  eval_pretrained.py  train.py
swarmclone/model_qwen/: __init__.py  __main__.py  config_qwen2.py
swarmclone/panel/: __main__.py  gen_api_key.py
swarmclone/panel/core/: module_manager.py  types.py
swarmclone/panel/frontend/: service.py
swarmclone/panel/frontend/static/: index.html
swarmclone/panel_client/: package-lock.json  package.json
swarmclone/panel_client/src/: App.vue
swarmclone/panel_client/src-tauri/: Cargo.toml  tauri.conf.json
swarmclone/panel_client/src-tauri/src/: main.rs
swarmclone/panel_dummy/: __main__.py
swarmclone/tts/: __main__.py  config_tts.py
swarmclone/tts_cosy_voice/: README.md  __init__.py  __main__.py  config_tts.py  requirements_tts_cosyvoice.txt  test.py
swarmclone/tts_cosy_voice/cosyvoice/cli/: cosyvoice.py  frontend.py
swarmclone/tts_cosyvoice/: __init__.py  __main__.py  align.py  config_tts.py  funcs.py  tts_cosyvoice.py
swarmclone/tts_dummy/: __main__.py
swarmclone/utils/: preprocess_openwebtext.py  preprocess_wudao.py  show_log.py  test_tokenizer.py  train_tokenizer.py
tests/: test_config.py
trd/: 2025-01-12.md
