[project]
name = "swarmclone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0, <3.11"
dependencies = [
    "accelerate>=1.8.1",
    "bilibili-api-python>=17.3.0",
    "dragonmapper>=0.3.0",
    "fastapi>=0.115.0,<0.116.dev0",
    "hanziconv>=0.3.2",
    "joblib==1.4.2",
    "loguru>=0.7.3",
    "modelscope>=1.22.0,<1.23.dev0",
    "openai>=1.95.1",
    "sherpa-onnx>=1.12.6",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "spacy>=3.8.7",
    "spacy-pkuseg>=1.0.0",
    "textgrid>=1.6.1",
    "tokenizers>=0.21.2",
    "tomli>=2.2.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "zhconv>=1.4.3",
    "huggingface-hub>=0.25.0,<0.26.dev0",
    "transformers>=4.48.3",
    "wheel>=0.45.1",
    "pip>=25.1.1",
    "setuptools>=80.9.0",
    "playsound",
    "sc-cosyvoice"
]

[tool.uv.sources]
playsound = { url = "https://www.piwheels.org/simple/playsound/playsound-1.3.0-py3-none-any.whl" }
sc-cosyvoice = { url = "http://pixelstonelab.com:5005/sc_cosyvoice-0.2.0-py3-none-any.whl" }
ttsfrd = { url = "http://pixelstonelab.com:5005/ttsfrd-0.4.2-cp310-cp310-linux_x86_64.whl" }
ttsfrd-dependency = { url = "http://pixelstonelab.com:5005/ttsfrd_dependency-0.1-py3-none-any.whl" }

[dependency-groups]
tts-linux = [
    "ttsfrd",
    "ttsfrd-dependency",
]
tts-windows = [
    "pynini>=2.1.6",
]
